# StashTrack

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  render.yaml
.github/workflows/: ci.yml
Source/: DownloadUtils.cpp  DownloadUtils.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UpdateUtils.cpp  UpdateUtils.h
Tests/: DownloadUtilsTests.cpp  PackagingTests.ps1
Tools/: DownloadProbe.cpp
installer/: install-stashtrack.ps1  install-stashtrack.sh
installer/windows/: StashTrack.iss  build-installer.ps1
jsui/: .babelrc  package.json  webpack.config.js
jsui-vsreact/: build.ts  package.json  tsconfig.json
jsui-vsreact/src/: App.tsx  main.tsx
jsui/src/: App.jsx  index.jsx
stashtrack-landing/: .gitignore  DESIGN.md  README.md  package.json
stashtrack-landing/app/: globals.css  layout.tsx  not-found.tsx  page.module.css  page.tsx
stashtrack-landing/app/components/: experience.tsx
stashtrack-landing/lib/: githubRelease.ts
